# h2_plant

./: .gitignore  README.md  components_list.txt  debug_legacy_values.py  debug_soec_keys.py  diagnose_chiller.py  diagnose_mole_frac.py  fix_git_lfs.sh  pyproject.toml  regenerate_graphs.py  reproduce_drycooler.py  reproduce_mass_balance.py  requirements.txt  run_log.txt  run_scenarios.py  setup.ps1  setup.py  summary_output.txt  system_status.md  trace_h2o.py  verify_atr_recovery.py
debug_output/: dashboard.html  simulation_results.json
docs/: ARCHITECTURE.md  BACKEND_DIAGRAM.md  COMPONENT_TRACKING_REFERENCE.md  Chapter_8_Merged_Final.docx  Chapter_8_Merged_Final.md  DETAILED_COMPONENTS_GUIDE.md  GUIDE_COMPONENTS.md  GUIDE_OPERATION.md  GUIDE_OPTIMIZATION.md  Plots.csv  Plots_table.md  Process Flow.csv  README.md  SYSTEM_AUDIT.md  component_specifications.md  developer_guide_component.md  h2_audit_analysis.md  requirements_explain.md  run_headless_guide.md  scientific_paper_h2_plant.aux  scientific_paper_h2_plant.out  scientific_paper_h2_plant.tex  software_architecture_file_reference.md  system_status.md  troubleshooting_guide.md  user_guide_topology.md  visualization_audit.txt  visualization_gap_analysis.md  windows_troubleshooting.md
examples/: advanced_simulation.py  basic_simulation.py  dual_path_simulation.py  short_simulation.py  visualization_example.py  water_mixer_integration.py
h2_plant/: __init__.py  orchestrator.py  run_gui_simulation.py  run_integrated_simulation.py  test.h2plant  test_debug.py
scenarios/: economics_parameters.yaml  h2plant_detailed.yaml  physics_parameters.yaml  plant_topology.yaml  plant_topology_attemperator.yaml  plant_topology_without_atr.yaml  plant_topologys.yaml  plant_topologyss.yaml  simulation_config.yaml  simulation_results_7200.json  visualization_config.yaml
scripts/: analyze_boiler_power.py  analyze_legacy_log.py  analyze_profile.py  calc_h05_temp.py  (+70 more)
(+679 files in other folders)
